--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-test
+<html>
+  <head>
+    <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+  </head>
+  <body>
+    Framework loaded
+  </body>
+</html>
