--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <html>
   <head>
-    <script src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"></script>
+    <!-- App ID is 49C28430 -->
+    <script
+      type="text/javascript"
+      src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"
+    ></script>
   </head>
   <body>
-    Framework loaded
+    <cast-media-player></cast-media-player>
+    <script>
+      cast.framework.CastReceiverContext.getInstance().start();
+    </script>
   </body>
 </html>
