Sender cast button and functions

--- a/index.html
+++ b/index.html
@@ -4,5 +4,19 @@
   </head>
   <body>
     Sender
+    <google-cast-launcher></google-cast-launcher>
+    <script>
+      initializeCastApi = function() {
+        cast.framework.CastContext.getInstance().setOptions({
+          receiverApplicationId: "49C28430",
+          autoJoinPolicy: chrome.cast.AutoJoinPolicy.ORIGIN_SCOPED
+        });
+      };
+      window["__onGCastApiAvailable"] = function(isAvailable) {
+        if (isAvailable) {
+          initializeCastApi();
+        }
+      };
+    </script>
   </body>
 </html>
