--- a/index.html
+++ b/index.html
@@ -1,22 +1,42 @@
 <html>
   <head>
     <script src="//www.gstatic.com/cv/js/sender/v1/cast_sender.js?loadCastFramework=1"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <style>
+      #castbutton {
+        float: right;
+        margin: 10px 6px 14px 0px;
+        width: 40px;
+        height: 32px;
+        opacity: 0.7;
+        background-color: #000;
+        border: none;
+        outline: none;
+      }
+
+      #castbutton:hover {
+        --disconnected-color: white;
+        --connected-color: white;
+      }
+    </style>
   </head>
   <body>
-    Sender
-    <google-cast-launcher></google-cast-launcher>
+    Sender2
+    <google-cast-launcher id="castbutton"></google-cast-launcher>
     <script>
-      initializeCastApi = function() {
-        cast.framework.CastContext.getInstance().setOptions({
-          receiverApplicationId: "49C28430",
-          autoJoinPolicy: chrome.cast.AutoJoinPolicy.ORIGIN_SCOPED
-        });
-      };
-      window["__onGCastApiAvailable"] = function(isAvailable) {
-        if (isAvailable) {
-          initializeCastApi();
-        }
-      };
+      $(function() {
+        initializeCastApi = function() {
+          cast.framework.CastContext.getInstance().setOptions({
+            receiverApplicationId: "49C28430",
+            autoJoinPolicy: chrome.cast.AutoJoinPolicy.ORIGIN_SCOPED
+          });
+        };
+        window["__onGCastApiAvailable"] = function(isAvailable) {
+          if (isAvailable) {
+            initializeCastApi();
+          }
+        };
+      });
     </script>
   </body>
 </html>
