Test reveiver change

--- a/r/index.html
+++ b/r/index.html
@@ -7,7 +7,8 @@
     ></script>
   </head>
   <body>
-    <cast-media-player></cast-media-player>
+    TestReceive1
+    <cast-media-player>TestReceive2</cast-media-player>
     <script>
       cast.framework.CastReceiverContext.getInstance().start();
     </script>
