Add receiver header

--- a/r/index.html
+++ b/r/index.html
@@ -7,7 +7,9 @@
     ></script>
   </head>
   <body>
-    TestReceive1
+    <div style="width: 100%; height: 100%; background-color: white ">
+      <h1>Hello</h1>
+    </div>
     <script>
       cast.framework.CastReceiverContext.getInstance().start();
     </script>
