--- a/r/index.html
+++ b/r/index.html
@@ -5,11 +5,29 @@
       type="text/javascript"
       src="//www.gstatic.com/cast/sdk/libs/caf_receiver/v3/cast_receiver_framework.js"
     ></script>
+    <style>
+      body,
+      html {
+        height: 100%;
+      }
+
+      .bg {
+        /* The image used */
+        background-image: url("mx.jpg");
+
+        /* Full height */
+        height: 100%;
+
+        /* Center and scale the image nicely */
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+    </style>
   </head>
   <body>
-    <div style="width: 100%; height: 100%; background-color: white ">
-      <h1>Hello</h1>
-    </div>
+    <!-- <img src="mx.jpg" /> -->
+    <div class="bg"></div>
     <script>
       cast.framework.CastReceiverContext.getInstance().start();
     </script>
